--- a/src/app/burger-menu/burger-menu.component.scss
+++ b/src/app/burger-menu/burger-menu.component.scss
@@ -1,12 +1,18 @@
 .burger-menu {
-    position: fixed;
+    width: 100%;
+    height: 100vh;
+}
+
+.burger-menu-content {
+    position: static;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    width: 100%;
-    height: 100vh;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .header-links {
