--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -15,9 +15,9 @@
                 <div></div>
             </a>
         </div>
-        <div class="burger-menu" style="display: none;">
-            <img src="assets/img/burger-menu/default.svg" alt="Burger Menu" (click)="openMenu()">
+        <div class="burger-menu">
+            <img src="assets/img/burger-menu/default.svg" alt="Burger Menu" (click)="openMenu()" [style]="clicked ? '' : ''">
         </div>
+        <app-burger-menu [ngClass]="clicked ? '' : 'd-none'"></app-burger-menu>
     </header>
 </section>
-<app-burger-menu></app-burger-menu>
