edited atf responsive

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,23 +1,27 @@
 <section>
     <header>
-        <a href="#atf"><img src="../assets/img/logo.png" alt="Name"></a>
+        <a href="#atf" class="logo"><img src="../assets/img/logo.png" alt="Name"></a>
         <div class="header-links">
-            <a [ngClass]="{'visited': activeLink === 'about-me-title'}" class="about-me" href="#about-me" id="about-me-title" (click)="visited('about-me-title')">
+            <a [ngClass]="{'visited': activeLink === 'about-me-title'}" class="about-me" href="#about-me"
+                id="about-me-title" (click)="visited('about-me-title')">
                 <p>About me</p>
                 <div></div>
             </a>
-            <a [ngClass]="{'visited': activeLink === 'skills-title'}" class="skills" href="#skills" id="skills-title" (click)="visited('skills-title')">
+            <a [ngClass]="{'visited': activeLink === 'skills-title'}" class="skills" href="#skills" id="skills-title"
+                (click)="visited('skills-title')">
                 <p>Skills</p>
                 <div></div>
             </a>
-            <a [ngClass]="{'visited': activeLink === 'portfolio-title'}" class="portfolio" href="#portfolio" id="portfolio-title" (click)="visited('portfolio-title')">
+            <a [ngClass]="{'visited': activeLink === 'portfolio-title'}" class="portfolio" href="#portfolio"
+                id="portfolio-title" (click)="visited('portfolio-title')">
                 <p>Portfolio</p>
                 <div></div>
             </a>
         </div>
         <div class="burger-menu">
-            <img src="assets/img/burger-menu/default.svg" alt="Burger Menu" (click)="openMenu()" [style]="clicked ? '' : ''">
+            <img src="assets/img/burger-menu/default.svg" alt="Burger Menu" (click)="openMenu()"
+                [style]="clicked ? '' : ''">
         </div>
-        <app-burger-menu [ngClass]="clicked ? '' : 'd-none'"></app-burger-menu>
     </header>
+    <app-burger-menu [ngClass]="clicked ? '' : 'd-none'"></app-burger-menu>
 </section>
