--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,6 +1,7 @@
 <div id="atf" class="atf">
     <div class="atf-section">
-        <img class="shape" src="assets/img/atf-shape.png" alt="Shape">
+        <img class="shape" src="assets/img/atf-shape.svg" alt="Shape">
+        <img class="shape-mobile" src="assets/img/atf-shape-mobile.svg" alt="Shape">
         <div class="atf-undersection">
             <div class="atf-content">
                 <div class="photo-div">
@@ -27,7 +28,7 @@
                             <a href="#contact"><img src="assets/img/mail-btn.svg" alt="E-Mail"></a>
                             <a href="https://linkedin.com"><img src="assets/img/linkedin-btn.svg" alt="Linkedin"></a>
                         </div>
-                        <a href="#contact">hello&#64;pirathib-mahalingam.com</a>
+                        <a href="#contact" class="mail-div">hello&#64;pirathib-mahalingam.com</a>
                     </div>
                 </div>
                 <div class="scroll-div">
