--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -25,6 +25,21 @@
     z-index: -1;
 }
 
+.shape-mobile {
+    // width: 390px;
+    // height: 467.43px;
+    // width: 190px;
+    // height: 267.43px;
+    position: absolute;
+    top: 345.09px;
+    width: 390px;
+    height: 267.43px;
+    // position: absolute;
+    // top: 377.6px;
+    // bottom: 0;
+    z-index: -1;
+}
+
 .atf-undersection {
     width: 100%;
     max-width: 1440px;
@@ -83,11 +98,6 @@
     // top: 297px;
     // left: 622px;
     gap: 35px;
-
-    h2 {
-        font-size: 56px;
-        line-height: 58px;
-    }
 
     button {
         font-size: 23px;
@@ -207,5 +217,180 @@
         width: 24px;
         height: 24px;
         transform: rotate(270deg);
+    }
+}
+
+@media screen and (min-width: 390px) {
+    .shape-mobile {
+        display: none;
+    }
+
+    .shape {
+        display: block;
+    }
+
+    .mail-div {
+        display: block;
+    }
+
+    .scroll-div {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 390px) {
+
+    .atf {
+        border: 1px solid yellow;
+        overflow-x: clip;
+        position: unset;
+    }
+
+    .atf-undersection {
+        border: 1px solid red;
+        width: 100%;
+        max-width: 390px;
+        height: 100%;
+        display: block;
+    }
+
+    .shape {
+        display: none;
+    }
+
+    .shadow {
+        position: relative;
+        top: 1px;
+        width: 300px;
+    }
+
+    .profile-img {
+        position: relative;
+        top: 277px;
+        z-index: -2;
+        width: auto;
+        height: 50px;
+        z-index: 0;
+    }
+
+    .mail-div {
+        display: none;
+    }
+
+    .scroll-div {
+        display: none;
+    }
+
+    .atf-content {
+        display: unset;
+    }
+    
+    .photo-div {
+        position: absolute;
+        top: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+    }
+    
+    .right-section {
+        position: unset;
+    }
+    
+    .title-div {
+        display: unset;
+
+    
+        button {
+            font-size: 10px;
+            line-height: 10.6px;
+            border: 0;
+            border-radius: 10px;
+            padding: 7px 15px;
+            box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+            gap: 10px;
+            background-color: var(--light-blue);
+            color: white;
+            cursor: pointer;
+            transition: 125ms ease-out;
+    
+            &:hover {
+                padding: 10px 20px;
+                background-color: var(--purple);
+            }
+        }
+    }
+    
+    .iam {
+        position: relative;
+        top: 73px;
+        right: 340px;
+        font-size: 25px;
+        // line-height: 76.8px;
+        // font-size: 64px;
+        transform: rotate(270deg);
+    }
+    
+    .title-profession {
+        font-size: 7px;
+        line-height: 8px;
+        color: var(--purple);
+        margin: 0;
+    }
+    
+    .border {
+        width: 64px;
+        border-bottom: 4px solid var(--purple);
+    }
+    
+    .socialmedia-btns {
+        display: unset;
+    
+        a {
+            display: block;
+            transition: 100ms ease-out;
+    
+            img {
+                width: 10px;
+                height: 10px;
+            }
+    
+            &:hover {
+                transform: scale(1.25);
+                transform-origin: left center;
+            }
+    
+            &:hover~a {
+                transform: translateX(10px);
+            }
+        }
+    }
+    
+    .atf-links {
+        display: unset;
+    }
+    
+    .contact-div {
+        position: unset;
+    }
+    
+    .contact-section {
+        display: unset;
+    }
+
+
+
+
+
+
+
+    h3 {
+        font-size: 10px;
+    }
+
+    p {
+        font-size: 7px;
     }
 }
