--- a/src/app/burger-menu/burger-menu.component.scss
+++ b/src/app/burger-menu/burger-menu.component.scss
@@ -1,14 +1,19 @@
 .burger-menu {
     width: 100%;
-    height: 100vh;
-}
-
-.burger-menu-content {
-    position: static;
+    height: 100%;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(20, 29, 47, 0.8);
+}
+
+.burger-menu-content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,12 +31,6 @@
         font-size: 23px;
         line-height: 27.6px;
     }
-}
-
-.burger-menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .visited {
