--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,7 +74,7 @@ body {
     font-family: 'Poppins', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 400;
     color: var(--white);
-    // width: 100vw;
+    width: 100vw;
     height: 100vh;
     background-color: var(--dark-blue);
     position: relative;
@@ -128,4 +128,46 @@ a {
 
 .d-none {
     display: none;
-} 
+}
+
+
+@media screen and (max-width: 390px) {
+    h2 {
+        font-size: 90px;
+        line-height: 108px;
+        font-weight: 700;
+        margin: 0;
+    }
+
+    h3 {
+        font-size: 56px;
+        line-height: 58px;
+    }
+
+    h4 {
+        font-size: 32px;
+        font-weight: 700;
+        line-height: 38.4px;
+        color: var(--purple);
+    }
+
+    h5 {
+        font-size: 38px;
+        line-height: 38.4px;
+        font-weight: 700;
+    }
+
+    h6 {
+        font-size: 23px;
+        font-weight: 400;
+        line-height: 27.6px;
+        color: var(--light-blue);
+    }
+
+    p {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 19.2px;
+    }
+
+}
