--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -87,24 +87,31 @@ header {
     }
 }
 
-@media screen and (min-width: 390px) {
+@media screen and (min-width: 391px) {
     .burger-menu {
         display: none;
     }
 }
 
 @media screen and (max-width: 390px) {
-    .burger-menu {
+    header {
         display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 37px 25px;
+        width: 100%;
+        max-width: 390px;
+        height: auto;
+        z-index: 2;
+        box-sizing: border-box;
+    
+        img {
+            width: 150px;
+            height: auto;
+        }
     }
 
     .header-links {
         display: none;
-    }
-
-    header {
-        padding: 37px 25px;
-        max-width: 390px;
-        z-index: 2;
     }
 }
