--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -24,9 +24,9 @@
                     <div class="contact-section">
                         <div class="border"></div>
                         <div class="socialmedia-btns">
-                            <a href="https://github.com"><img src="assets/img/github-btn.svg" alt="Github"></a>
+                            <a href="https://github.com" target="_blank"><img src="assets/img/github-btn.svg" alt="Github"></a>
                             <a href="#contact"><img src="assets/img/mail-btn.svg" alt="E-Mail"></a>
-                            <a href="https://linkedin.com"><img src="assets/img/linkedin-btn.svg" alt="Linkedin"></a>
+                            <a href="https://linkedin.com" target="_blank"><img src="assets/img/linkedin-btn.svg" alt="Linkedin"></a>
                         </div>
                         <a href="#contact" class="mail-div">hello&#64;pirathib-mahalingam.com</a>
                     </div>
