edited about me responsive

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -10,7 +10,7 @@
                         <p>Some personal thing to share(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                     </div>
                     <div class="keys-div">
-                        <img class="icon" src="assets/img/puzzle.svg" alt="">
+                        <img class="icon puzzle" src="assets/img/puzzle.svg" alt="">
                         <p>Some personal thing to share(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                     </div>
                 </div>
