--- a/src/styles.scss
+++ b/src/styles.scss
@@ -133,10 +133,10 @@ a {
 
 @media screen and (max-width: 390px) {
     h2 {
-        // font-size: 90px;
-        // line-height: 108px;
-        // font-weight: 700;
-        // margin: 0;
+        font-size: 45px;
+        line-height: 54px;
+        font-weight: 700;
+        margin: 0;
     }
 
     h3 {
@@ -163,11 +163,4 @@ a {
         // line-height: 27.6px;
         // color: var(--light-blue);
     }
-
-    p {
-        // font-size: 16px;
-        // font-weight: 400;
-        // line-height: 19.2px;
-    }
-
 }
