--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -55,7 +55,7 @@
 .icon {
     height: 50px;
     margin-top: 4px;
-    padding: 0px, 2px;
+    padding: 0px 2px;
     transition: 125ms ease-in-out;
 
     &:hover {
@@ -91,4 +91,47 @@
     width: 267px;
     height: 0;
     border-top: 4px solid var(--light-blue);
+}
+
+@media screen and (min-width: 390px) {
+
+}
+
+@media screen and (max-width: 390px) {
+    .about-me {
+        top: 918px;
+    }
+
+    .about-me-section {
+        max-width: 390px;
+    }
+
+    .about-me-content {
+        left: 25px;
+    }
+
+    .text-div {
+        width: 338px;
+    }
+    
+    .keys-div {
+        align-items: center;
+
+        p {
+            width: 252px;
+        }
+    }
+
+    .icon {
+        width: 50px;
+        height: 50px;
+    }
+
+    .puzzle {
+        padding-left: 6px;
+    }
+
+    .img-div {
+        display: none;
+    }
 }
