--- a/src/styles.scss
+++ b/src/styles.scss
@@ -152,9 +152,9 @@ a {
     }
 
     h5 {
-        // font-size: 38px;
-        // line-height: 38.4px;
-        // font-weight: 700;
+        font-size: 23px;
+        line-height: 27.6px;
+        font-weight: 700;
     }
 
     h6 {
@@ -162,5 +162,11 @@ a {
         // font-weight: 400;
         // line-height: 27.6px;
         // color: var(--light-blue);
+    }
+
+    p {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 19.2px;
     }
 }
