--- a/src/app/burger-menu/burger-menu.component.html
+++ b/src/app/burger-menu/burger-menu.component.html
@@ -13,7 +13,7 @@
                 <p>Portfolio</p>
                 <div></div>
             </a>
-            <a [ngClass]="{'visited': activeLink === 'contact'}" class="contact" href="#contact" id="contact" (click)="visited('contact')">
+            <a [ngClass]="{'visited': activeLink === 'contact-title'}" class="contact" href="#contact" id="contact-title" (click)="visited('contact-title')">
                 <p>Contact</p>
                 <div></div>
             </a>
