--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
-<div class="contact" id="contact">
-    <div class="contact-content">
+<div class="contact" >
+    <div class="contact-content" id="contact">
         <div class="border"></div>
         <div class="contact-div">
             <h2>Contact</h2>
