--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -100,6 +100,7 @@
 @media screen and (max-width: 390px) {
     .about-me {
         top: 918px;
+        scroll-margin-top: 120px;
     }
 
     .about-me-section {
