--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -141,6 +141,7 @@
         top: 1532px;
         right: unset;
         left: unset;
+        scroll-margin-top: 120px;
     }
 
     .skills-section {
