--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -56,6 +56,7 @@ p {
 @media screen and (max-width: 390px) {
     .portfolio {
         top: 2529px;
+        scroll-margin-top: 120px;
     }
 
     .portfolio-content {
