--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,8 +1,9 @@
 .imprint {
-    position: absolute;
-    top: 110px;
-    right: 0;
-    left: 0;
+    // position: absolute;
+    // top: 110px;
+    // right: 0;
+    // left: 0;
+    flex: 1;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -38,4 +39,21 @@
     left: 1209px;
     transform: rotate(270deg);
     transition: 200ms ease-in-out;
+}
+
+@media screen and (max-width: 390px) {
+    .imprint-content {
+        padding: 100px 25px;
+
+        p {
+            margin-bottom: unset;
+        }
+    }
+
+    .arrow {
+        position: absolute;
+        top: 34px;
+        left: unset;
+        right: 32px;
+    }
 }
