--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,8 +1,8 @@
 .footer {
-    position: absolute;
-    top: 5142px;
-    right: 0;
-    left: 0;
+    // position: absolute;
+    // top: 5142px;
+    // right: 0;
+    // left: 0;
     width: 100%;
     display: flex;
     justify-content: center;
