--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,7 +75,7 @@ body {
     font-weight: 400;
     color: var(--white);
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: var(--dark-blue);
     position: relative;
     overflow-x: hidden;
