--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <app-above-the-fold></app-above-the-fold>
-<app-shadow></app-shadow>
+<!-- <app-shadow></app-shadow> -->
 <app-about-me></app-about-me>
 <app-my-skills></app-my-skills>
 <app-portfolio></app-portfolio>
