edited margin to every component

--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -9,7 +9,7 @@
     width: 100%;
     max-width: 1440px;
     height: 100%;
-    padding: 46px 100px 100px 100px;
+    padding: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
