--- a/src/app/shadow/shadow.component.html
+++ b/src/app/shadow/shadow.component.html
@@ -2,7 +2,7 @@
     <div class="shadow-content">
         <img src="assets/img/shadows/about-me.svg" alt="Shadow" class="shadow-1">
         <img src="assets/img/shadows/my-skills.svg" alt="Shadow" class="shadow-2">
-        <img src="assets/img/shadows/portfolio.svg" alt="Shadow" class="shadow-3">
+        <!-- <img src="assets/img/shadows/portfolio.svg" alt="Shadow" class="shadow-3"> -->
         <img src="assets/img/shadows/portfolio-2.svg" alt="Shadow" class="shadow-4">
         <img src="assets/img/shadows/footer.svg" alt="Shadow" class="shadow-5">
     </div>
