--- a/src/app/shadow/shadow.component.scss
+++ b/src/app/shadow/shadow.component.scss
@@ -46,6 +46,7 @@
 .shadow-5 {
     transform: rotate(90deg);
     position: relative;
-    top: 557px;
+    // top: 557px;
+    top: 1657px;
     right: 501px;
 }
