--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     scroll-margin-top: 180px;
+    margin-bottom: 256px;
 }
 
 .about-me-section {
