--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -96,6 +96,7 @@
 
 @media screen and (max-width: 390px) {
     .about-me {
+        margin-bottom: 156px;
         scroll-margin-top: 120px;
     }
 
