--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -175,8 +175,8 @@
     }
 
     .button-div {
-        position: absolute;
-        top: 812px;
+        position: relative;
+        top: 712px;
 
         button {
             font-size: 16px;
