--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -52,6 +52,7 @@ p {
 
 @media screen and (max-width: 390px) {
     .portfolio {
+        margin-bottom: 156px;
         scroll-margin-top: 120px;
     }
 
