--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -9,10 +9,11 @@
     gap: 120px;
     display: flex;
     justify-content: center;
-    position: relative;
+    // position: relative;
 }
 
 .shape {
+    display: block;
     width: 1442px;
     height: 1078.6px;
     position: absolute;
@@ -55,7 +56,6 @@
     position: relative;
     top: 200px;
     right: 809px;
-    width: auto;
     height: 620px;
     z-index: -2;
     // // top: 140px;
@@ -212,28 +212,10 @@
     }
 }
 
-@media screen and (min-width: 390px) {
-    .shape-mobile {
-        display: none;
-    }
-
-    .shape {
-        display: block;
-    }
-
-    .mail-div {
-        display: block;
-    }
-
-    .scroll-div {
-        display: block;
-    }
-}
-
 @media screen and (max-width: 390px) {
     .atf {
-        overflow-x: clip;
-        position: unset;
+        // overflow-x: clip;
+        margin-bottom: 426px;
     }
 
     .shape-mobile {
@@ -244,7 +226,6 @@
         width: 100%;
         max-width: 390px;
         height: 100%;
-        display: block;
     }
 
     .shape {
@@ -252,21 +233,20 @@
     }
 
     .shadow {
-        position: relative;
-        top: 22px;
-        left: 20px;
+        display: none;
+        position: absolute;
+        top: 156px;
+        left: 9px;
         height: 477px;
-        overflow-y: clip;
     }
 
     .profile-img {
-        position: absolute;
-        top: 149px;
+        position: relative;
+        top: 180px;
         right: unset;
         left: 0px;
         z-index: -2;
-        width: auto;
-        height: 360px;
+        height: 335px;
     }
 
     .mail-div {
@@ -278,22 +258,21 @@
     }
 
     .atf-content {
-        display: unset;
+        flex-direction: column;
+        align-items: center;
     }
 
     .photo-div {
-        position: absolute;
-        top: 0;
         justify-content: center;
         align-items: center;
         height: 100%;
-        width: 100%;
+        overflow-x: clip;
     }
 
     .right-section {
         position: relative;
         // top: 579px;
-        top: 547px;
+        top: 190px;
         right: unset;
         left: 8px;
         width: unset;
