edited footer responsive

--- a/src/app/shared/components/header/header-mobile.component.scss
+++ b/src/app/shared/components/header/header-mobile.component.scss
@@ -23,7 +23,7 @@
 @media screen and (max-width: 425px) {
     header {
         padding: 37px 25px;
-        max-width: 768px;
+        max-width: 425px;
     }
 }
 
@@ -31,6 +31,32 @@
     header {
         max-width: 375px;
     }
+}
+
+@media screen and (max-width: 320px) {
+    header {
+        max-width: 320px;
+    }
+}
+
+
+////////////////////////////////////////////
+
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 425px) {
+
+}
+
+@media screen and (max-width: 375px) {
+
 }
 
 @media screen and (max-width: 320px) {
